# discord-channel-pipe

./: Cargo.toml  Dockerfile  README.md  build.rs  python_check.py
.github/workflows/: main.yml  release-dev.yml
discord_pipe/: Cargo.toml
discord_pipe/src/: discord_push_handler.rs  lib.rs  service.rs
discord_pipe/tests/: discord_integration.rs
message_rpc/: Cargo.toml  build.rs
message_rpc/src/: lib.rs
proto/: discord_pipe.proto
src/: constants.rs  discord_push_handler.rs  lib.rs  main.rs  prototypes.rs  service.rs  tgtg.rs  utils.rs
tests/: discord_integration.rs
