[package]
name = "discord_pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
tonic = "0.6.2"
prost = "0.9.0"
futures="0.3.16"
log = "0.4"
env_logger = "0.9"


[build-dependencies]
tonic-build = "0.6.2"