[package]
name = "discord_pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
tonic = "0.6"
prost = "0.9"
log = "0.4"
env_logger = "0.9"
temp-env = "0.2"

[build-dependencies]
tonic-build = "0.6"